tmux.conf misc adjustments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,45 +125,23 @@ bind -T copy-mode PageDown    send-keys -X page-down
 ###############################################################################
 # Key Bindings
 ###############################################################################
-## prefix + number: select window directly (1-indexed)
-bind 1 select-window -t :1
-bind 2 select-window -t :2
-bind 3 select-window -t :3
-bind 4 select-window -t :4
-bind 5 select-window -t :5
-bind 6 select-window -t :6
-bind 7 select-window -t :7
-bind 8 select-window -t :8
-bind 9 select-window -t :9
-## prefix + shift+number: select pane (US keyboard: !=1 @=2 #=3 $=4 %=5 ^=6 &=7 *=8 (=9 )=10)
-bind  !  select-pane -t .1
-bind  @  select-pane -t .2
-bind '#' select-pane -t .3
-bind '$' select-pane -t .4
-bind  %  select-pane -t .5
-bind  ^  select-pane -t .6
-bind  &  select-pane -t .7
-bind  *  select-pane -t .8
-bind  (  select-pane -t .9
-bind  )  select-pane -t .10
-
 ## Some easier ones GNU Screen style key bindings, which I'm pretty used to
 # new window in the same working directory
 unbind ^C; bind ^C new-window -c "#{pane_current_path}"
 unbind  c; bind  c new-window -c "#{pane_current_path}"
 # new pane in the same working directory
-unbind '"' ; bind '"' split-window -v -b -c "#{pane_current_path}"
-unbind   % ; bind   % split-window -h -b -c "#{pane_current_path}"
+unbind '"'; bind '"' split-window -v -b -c "#{pane_current_path}"
+unbind  v ; bind  v  split-window -h -b -c "#{pane_current_path}"
 # session
 unbind  S; bind  S new-session
 #unbind ^S; bind ^S switch-client -l
 # kill-session
-bind ^K confirm-before kill-session
+bind K confirm-before kill-session
 
 # break window into new session
-unbind @
+unbind ^B
 #bind @ command-prompt -I "1" -p "(break window to new-session)" "new-session -d -n'moving' -s'%1' 'sleep 1'; swap-window -t'%1:moving'; switch-client -t'%1:'"
-bind @ split-window -d -h -l0 \
+bind ^B split-window -d -h -l0 \
     'n=$(tmux list-sessions -F "#S" | grep "^[0-9]\\+$" | sort -nr | head -n 1); let n++; \
         tmux command-prompt -I "$n" -p "(break window into new session)" \
             "new-session -d -s\"%1\" -n moving \"sleep 1\"; swap-window -t\"%1:moving\"; switch-client -t\"%1:\""'
@@ -188,7 +166,7 @@ unbind ^W; bind ^W choose-window
 unbind ^L; bind ^L refresh-client
 
 # reload config
-unbind ^R; bind ^R source ~/.tmux.conf
+unbind r; bind r source ~/.tmux.conf
 
 # record window
 bind | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
@@ -196,6 +174,28 @@ bind | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
 # toggle activity/silence monitoring
 bind M setw monitor-activity on\; setw monitor-silence 0
 bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off; setw monitor-silence %%"
+
+## prefix + number: select window directly (1-indexed)
+bind 1 select-window -t :1
+bind 2 select-window -t :2
+bind 3 select-window -t :3
+bind 4 select-window -t :4
+bind 5 select-window -t :5
+bind 6 select-window -t :6
+bind 7 select-window -t :7
+bind 8 select-window -t :8
+bind 9 select-window -t :9
+## prefix + shift+number: select pane (US keyboard: !=1 @=2 #=3 $=4 %=5 ^=6 &=7 *=8 (=9 )=10)
+bind  !  select-pane -t .1
+bind  @  select-pane -t .2
+bind '#' select-pane -t .3
+bind '$' select-pane -t .4
+bind  %  select-pane -t .5
+bind  ^  select-pane -t .6
+bind  &  select-pane -t .7
+bind  *  select-pane -t .8
+bind  (  select-pane -t .9
+bind  )  select-pane -t .10
 
 
 ## Vim and Emacs inspired key bindings
@@ -206,10 +206,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 # resize panes like vim
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+bind - resize-pane -U 5
+bind + resize-pane -D 5
 ## key bindings compatible with my Emacs config
 unbind Tab
 bind Tab select-pane -t :.+
