tmux using more tmux-sensible plugin's

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,22 @@
-# netj's .tmux.conf
+# netj's TMUX configuration
 # Author: Jaeho Shin <netj@sparcs.org>
 # Created: 2010-12-26
-# Re-Created: 2026-02-01  # w/ tpm
+# Re-Created: 2026-02-01  # w/ tmux-plugins/tpm
 
-# C-t as prefix
-set -g prefix C-t
+# C-t as prefix not C-b b/c it's TMUX not BMUX; moreover, C-b/C-f is essential for EMACS-mode readline in BASH/etc.
+set -g prefix C-t; unbind C-b
+
+## settings for TMUX in TMUX windows/panes
+# C-t t to send prefix is a more sensible escaping scheme than TMUX or tmux-plugins/tmux-sensible's default
+# b/c when using TMUX in TMUX (double-decker or more), you really don't want to press C-t 2^k times but just press C-t once followed by the t key only k times for sending the prefix key to the k-th inner/nested TMUX sessions
 unbind C-t; bind C-t last-window
-unbind t; bind t send-prefix
-unbind C-b
-# toggle prefix suitable for (double-decker) tmux in tmux windows
-bind -n C-M-t \
+unbind   t; bind   t send-prefix
+# swap outer TMUX prefix to a different one to let the usual prefix directly reach the inner TMUX
+bind T \
     if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
         "set prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
         "set prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
         #
-
-set -g default-terminal "screen-256color"  # FIXME handle TERM=tmux-256color from elsewhere
-set -g mouse on
 
 # status and title format
 set -g set-titles on
@@ -37,8 +37,8 @@ setw -g window-status-bell-style fg=red,bright
 ###############################################################################
 # TPM Plugins
 ###############################################################################
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible'      # hx limit, mouse, C-n/C-p over awkward n/p
+set -g @plugin 'tmux-plugins/tmux-pain-control'  # move around panes with j and k, a bit like vim; resize panes like vim
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -80,7 +80,8 @@ set -g @resurrect-capture-pane-contents 'on'
 ###############################################################################
 # Initialize TPM (keep this before local config sourcing)
 ###############################################################################
-run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+run '~/.tmux/plugins/tmux-plugins/tpm/tpm'
 
 ###############################################################################
 # Base Options (override sensible defaults where needed)
@@ -151,22 +152,11 @@ unbind ^D; bind ^D detach
 # make this client the only one by detaching all other clients
 unbind O; bind O attach-session -d
 
-# next ^@ ^N sp n
-unbind ^N; bind ^N next-window
-unbind  n; bind  n next-window
-
-# prev ^H ^P p ^?
-unbind ^P; bind ^P previous-window
-unbind  p; bind  p previous-window
-
 # windows ^W w
 unbind ^W; bind ^W choose-window
 
 # redisplay ^L
 unbind ^L; bind ^L refresh-client
-
-# reload config
-unbind r; bind r source ~/.tmux.conf
 
 # record window
 bind | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
@@ -199,17 +189,6 @@ bind  )  select-pane -t .10
 
 
 ## Vim and Emacs inspired key bindings
-# move around panes with j and k, a bit like vim
-unbind l
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-# resize panes like vim
-bind < resize-pane -L 10
-bind > resize-pane -R 10
-bind - resize-pane -U 5
-bind + resize-pane -D 5
 ## key bindings compatible with my Emacs config
 unbind Tab
 bind Tab select-pane -t :.+
