tmux.conf reboot

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,50 +3,50 @@
 # Created: 2010-12-26
 # Re-Created: 2026-02-01  # w/ tmux-plugins/tpm
 
+###############################################################################
+# Essential config
+###############################################################################
 # C-t as prefix not C-b b/c it's TMUX not BMUX; moreover, C-b/C-f is essential for EMACS-mode readline in BASH/etc.
 set -g prefix C-t; unbind C-b
+set -g default-command '$SHELL -l'  # ensure starting a login shell
 
-## settings for TMUX in TMUX windows/panes
-# C-t t to send prefix is a more sensible escaping scheme than TMUX or tmux-plugins/tmux-sensible's default
-# b/c when using TMUX in TMUX (double-decker or more), you really don't want to press C-t 2^k times but just press C-t once followed by the t key only k times for sending the prefix key to the k-th inner/nested TMUX sessions
-unbind C-t; bind C-t last-window
-unbind   t; bind   t send-prefix
-# swap outer TMUX prefix to a different one to let the usual prefix directly reach the inner TMUX
-bind T \
-    if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
-        "set prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
-        "set prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
-        #
-
-# status and title format
-set -g set-titles on
-set -g set-titles-string "#T - #I:#W#F#S^#h"
-set -g status-justify right
-set -g status-left "#T"
-set -g status-left-length 48
-set -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
-set -g status-right-length 16
-set -g  status-style bg=black
-set -ga status-style fg=brightblack
-set -g  status-left-style fg=green,bright
-setw -g window-status-style fg=brightblack
-setw -g window-status-current-style fg=green,bright
-setw -g window-status-activity-style fg=yellow,bright
-setw -g window-status-bell-style fg=red,bright
+set -g base-index 1
+set -g pane-base-index 1
+set -g display-time 2500
+setw -g clock-mode-style 24
+setw -g wrap-search off
+setw -g mouse on
 
 ###############################################################################
 # TPM Plugins
 ###############################################################################
 set -g @plugin 'tmux-plugins/tmux-sensible'      # hx limit, mouse, C-n/C-p over awkward n/p
+
+# vim-tmux-navigator with C-M-h/j/k/l (preserving custom bindings)
 set -g @plugin 'tmux-plugins/tmux-pain-control'  # move around panes with j and k, a bit like vim; resize panes like vim
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @vim_navigator_mapping_left "C-M-h"
+set -g @vim_navigator_mapping_down "C-M-j"
+set -g @vim_navigator_mapping_up "C-M-k"
+set -g @vim_navigator_mapping_right "C-M-l"
+set -g @vim_navigator_mapping_prev ""
+set -g @vim_navigator_prefix_mapping_clear_screen ""
+
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
+# continuum
 #set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'dracula/tmux'
+#set -g @continuum-restore 'on'
 
 # dracula theme
+set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-plugins "git cwd ssh-session"
 #set -g @dracula-show-left-icon session
@@ -62,151 +62,66 @@ set -g @dracula-cwd-max-dirs "5"
 
 set -g @dracula-show-flags true  # FIXME recover window status color config
 
-# vim-tmux-navigator with C-M-h/j/k/l (preserving custom bindings)
-set -g @vim_navigator_mapping_left "C-M-h"
-set -g @vim_navigator_mapping_down "C-M-j"
-set -g @vim_navigator_mapping_up "C-M-k"
-set -g @vim_navigator_mapping_right "C-M-l"
-set -g @vim_navigator_mapping_prev ""
 
-# resurrect
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-
-# continuum
-#set -g @continuum-restore 'on'
-
+## Initialize TPM (keep this before local config sourcing)
+# XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
+set -g @plugin 'netj/tpm'
+if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
+    "run '~/.tmux/plugins/netj/tpm/tpm'" \
+    "source ~/.tmux-basic.conf"
 
 ###############################################################################
-# Initialize TPM (keep this before local config sourcing)
+# Essential config, continued; also compensating plugin
 ###############################################################################
-set -g @plugin 'tmux-plugins/tpm'
-run '~/.tmux/plugins/tmux-plugins/tpm/tpm'
 
-###############################################################################
-# Base Options (override sensible defaults where needed)
-###############################################################################
-set -g base-index 1
-set -g pane-base-index 1
-set -g history-limit 10000000
-set -g status-keys vi
-setw -g mode-keys vi
-set -g display-time 2500
-setw -g monitor-activity on
-setw -g clock-mode-style 24
-setw -g wrap-search off
+unbind ^D; bind ^D detach           # easier detach w/ Ctrl
+unbind ^C; bind ^C new-window -c "#{pane_current_path}"  # easier new window
+unbind  C; bind  C new-session      # easier new session
+bind Tab attach-session -d          # easier to detach all other clients to make this client the only one
+bind ` confirm-before kill-session  # eaiser kill-session
 
-# override @dracula to have colored window status
-setw -g window-status-style fg=brightblack
-setw -g window-status-current-style fg=green,bright
-setw -g window-status-activity-style fg=yellow,bright
-setw -g window-status-bell-style fg=red,bright,blink
-setw -g window-status-format " #I:#{b:pane_current_path}#F "
-setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
+## settings for TMUX in TMUX windows/panes
+# C-t t to send prefix is a more sensible escaping scheme than TMUX or tmux-plugins/tmux-sensible's default
+# b/c when using TMUX in TMUX (double-decker or more), you really don't want to press C-t 2^k times but just press C-t once followed by the t key only k times for sending the prefix key to the k-th inner/nested TMUX sessions
+unbind C-t; bind C-t last-window
+unbind   t; bind   t send-prefix
+# swap outer TMUX prefix to a different one to let the usual prefix directly reach the inner TMUX
+bind T \
+    if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
+        "set prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
+        "set prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
+        #
 
-# pane border status at top of each pane
-set -g pane-border-status top
-set -g pane-border-format " #P: #{pane_current_command} "
+## easier window selection with an alert via lifting Ctrl (NOTE prefix C-n/C-p in tmux-sensible selects all windows)
+bind n next-window -a
+bind p previous-window -a
 
-###############################################################################
-# Copy Mode
-###############################################################################
-# trigger copy mode by
-bind -n M-Up     copy-mode
-bind -n M-PageUp copy-mode
-# Scroll up/down by 1 line, half screen, whole screen
-bind -T copy-mode M-Up        send-keys -X scroll-up
-bind -T copy-mode M-Down      send-keys -X scroll-down
-bind -T copy-mode M-PageUp    send-keys -X halfpage-up
-bind -T copy-mode M-PageDown  send-keys -X halfpage-down
-bind -T copy-mode PageUp      send-keys -X page-up
-bind -T copy-mode PageDown    send-keys -X page-down
+## easier pane selection/rotation (default is not symmetric and a bit awkward)
+bind C-o select-pane -t :.+
+bind   o select-pane -t :.-
+bind   O rotate-window
+bind M-o rotate-window -D
 
-
-###############################################################################
-# Key Bindings
-###############################################################################
-## Some easier ones GNU Screen style key bindings, which I'm pretty used to
-# new window in the same working directory
-unbind ^C; bind ^C new-window -c "#{pane_current_path}"
-unbind  c; bind  c new-window -c "#{pane_current_path}"
-# new pane in the same working directory
-unbind '"'; bind '"' split-window -v -b -c "#{pane_current_path}"
-unbind  v ; bind  v  split-window -h -b -c "#{pane_current_path}"
-# session
-unbind  S; bind  S new-session
-#unbind ^S; bind ^S switch-client -l
-# kill-session
-bind K confirm-before kill-session
-
-# break window into new session
-unbind ^B
-#bind @ command-prompt -I "1" -p "(break window to new-session)" "new-session -d -n'moving' -s'%1' 'sleep 1'; swap-window -t'%1:moving'; switch-client -t'%1:'"
-bind ^B split-window -d -h -l0 \
-    'n=$(tmux list-sessions -F "#S" | grep "^[0-9]\\+$" | sort -nr | head -n 1); let n++; \
-        tmux command-prompt -I "$n" -p "(break window into new session)" \
-            "new-session -d -s\"%1\" -n moving \"sleep 1\"; swap-window -t\"%1:moving\"; switch-client -t\"%1:\""'
-
-# detach
-unbind ^D; bind ^D detach
-# make this client the only one by detaching all other clients
-unbind O; bind O attach-session -d
-
-# windows ^W w
-unbind ^W; bind ^W choose-window
-
-# redisplay ^L
-unbind ^L; bind ^L refresh-client
-
-# record window
-bind | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
-
-# toggle activity/silence monitoring
-bind M setw monitor-activity on\; setw monitor-silence 0
-bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off; setw monitor-silence %%"
-
-## prefix + number: select window directly (1-indexed)
-bind 1 select-window -t :1
-bind 2 select-window -t :2
-bind 3 select-window -t :3
-bind 4 select-window -t :4
-bind 5 select-window -t :5
-bind 6 select-window -t :6
-bind 7 select-window -t :7
-bind 8 select-window -t :8
-bind 9 select-window -t :9
-## prefix + shift+number: select pane (US keyboard: !=1 @=2 #=3 $=4 %=5 ^=6 &=7 *=8 (=9 )=10)
-bind  !  select-pane -t .1
-bind  @  select-pane -t .2
-bind '#' select-pane -t .3
-bind '$' select-pane -t .4
-bind  %  select-pane -t .5
-bind  ^  select-pane -t .6
-bind  &  select-pane -t .7
-bind  *  select-pane -t .8
-bind  (  select-pane -t .9
-bind  )  select-pane -t .10
-
-
-## Vim and Emacs inspired key bindings
-## key bindings compatible with my Emacs config
-unbind Tab
-bind Tab select-pane -t :.+
-bind C-o select-pane -t :.-
+# prefix + number: select pane directly (1-indexed)
+# NOTE prefix ' then number let's select-window by number easily
+bind 1 select-pane -t .1
+bind 2 select-pane -t .2
+bind 3 select-pane -t .3
+bind 4 select-pane -t .4
+bind 5 select-pane -t .5
+bind 6 select-pane -t .6
+bind 7 select-pane -t .7
+bind 8 select-pane -t .8
+bind 9 select-pane -t .9
+bind 0 select-pane -t .10
 
 ## Ctrl+Opt/Alt: quicker access to frequently used prefix combos
-# quick select last window
-bind -n C-M-a select-window -l
-# quick toggle zoom pane
-bind -n C-M-z resize-pane -Z
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-M-z  resize-pane -Z  # quick toggle zoom pane          (normally prefix z)
+bind -n C-M-\\ select-pane -l  # quick switching btwn last panes (normally prefix ;) cf. vim_navigator_mapping_prev
 # quicker vim-like split
 bind -n C-M-v split-window -h -b -c "#{pane_current_path}"
 bind -n C-M-n split-window -v -b -c "#{pane_current_path}"
 bind -n C-M-s split-window -v -b -c "#{pane_current_path}"
-bind -n C-M-\\ select-pane -l  # and quick switching btwn last panes
-bind -n C-M-w if-shell "$is_vim" "send-keys C-\\\\ C-o C-M-w"  "confirm-before kill-pane"
 
 # quick commands in new pane with Ctrl+Opt
 bind -n C-M-f split-window -h -b -c "#{pane_current_path}" vim +Files
@@ -216,13 +131,8 @@ bind -n C-M-c split-window -v -b -c "#{pane_current_path}" claude
 
 
 ###############################################################################
-# Mac-specific settings
-###############################################################################
-if-shell "type reattach-to-user-namespace" 'set -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
-if-shell "! type reattach-to-user-namespace" 'set -g default-command "env SHLVL=0 bash -l"'
-
-
-###############################################################################
 # Local config
 ###############################################################################
 if-shell "[ -e ~/.tmux_local ]" "source-file ~/.tmux_local"
+
+# vim:ft=tmux
