tmux title for tmux-256colors, switching to catppuccin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,27 @@ set -g display-time 2500
 setw -g clock-mode-style 24
 setw -g wrap-search off
 setw -g mouse on
+setw -g monitor-activity on
+set -g set-titles on
+
+set -g set-titles-string "#T - #I:#W#F#S^#h"
+set -g status-left "#T"
+set -g status-left-length 48
+set -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#h#[default]"
+set -g status-right-length 16
+set -g  status-style bg=black
+set -ga status-style fg=brightblack
+set -g  status-left-style fg=green,bright
+setw -g window-status-style fg=brightblack
+setw -g window-status-current-style fg=green,bright
+setw -g window-status-activity-style fg=yellow,bright
+setw -g window-status-bell-style fg=red,bright
+setw -g window-status-bell-style fg=red,bright,blink
+setw -g window-status-format " #I:#{b:pane_current_path}#F "
+setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
+
+set -g pane-border-status top
+set -g pane-border-format " #P: #{pane_current_command} "
 
 ###############################################################################
 # TPM Plugins
@@ -45,23 +66,42 @@ set -g @resurrect-capture-pane-contents 'on'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
 
-# dracula theme
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-powerline true
-set -g @dracula-plugins "git cwd ssh-session"
-#set -g @dracula-show-left-icon session
-set -g @dracula-show-left-icon "#[fg=darkblue,bold]#T"  # title
-#set -g @dracula-border-contrast true
+# Catppuccin theme works better than dracula, esp. for alerting windows
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+# TODO
+#set -g @catppuccin_pane_status_enabled "yes"
+#set -g @catppuccin_pane_border_status "yes"
+#set -g @catppuccin_window_text " #T"
+#
+#set -g status-left ""
+#set -ga status-left "#{E:@catppuccin_status_application}"
+#set -g status-right ""
+#set -ga status-right "#{E:@catppuccin_status_session}"
+#setw -g window-status-style fg=brightblack
+#setw -g window-status-current-style fg=green,bright
+#setw -g window-status-activity-style fg=yellow,bright
+#setw -g window-status-bell-style fg=red,bright,blink
+#setw -g window-status-format " #I:#{b:pane_current_path}#F "
+#setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
 
-set -g @dracula-cwd-max-dirs "5"
-#set -g @dracula-cwd-max-chars "64"
-#set -g @dracula-show-ssh-only-when-connected true
-
-#set -g @dracula-time-format "%F %a %R:%S"
-#set -g @dracula-refresh-rate 1
-
-set -g @dracula-show-flags true  # FIXME recover window status color config
-
+## dracula theme
+#set -g @plugin 'dracula/tmux'
+#set -g @dracula-show-powerline true
+#set -g @dracula-plugins "git cwd ssh-session"
+##set -g @dracula-show-left-icon session
+#set -g @dracula-show-left-icon "#[fg=darkblue,bold]#T"  # title
+##set -g @dracula-border-contrast true
+#
+#set -g @dracula-cwd-max-dirs "5"
+##set -g @dracula-cwd-max-chars "64"
+##set -g @dracula-show-ssh-only-when-connected true
+#
+##set -g @dracula-time-format "%F %a %R:%S"
+##set -g @dracula-refresh-rate 1
+#
+#set -g @dracula-show-flags true  # FIXME recover window status color config
 
 ## Initialize TPM (keep this before local config sourcing)
 # XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
