WIP tmux so far so good w/ rebooting status/pane bars

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,44 +66,22 @@ set -g @resurrect-capture-pane-contents 'on'
 #set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
 
-# Catppuccin theme works better than dracula, esp. for alerting windows
+# Catppuccin theme works slightly better than dracula
 set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-# TODO
-#set -g @catppuccin_pane_status_enabled "yes"
-#set -g @catppuccin_pane_border_status "yes"
-#set -g @catppuccin_window_text " #T"
-#
-#set -g status-left ""
-#set -ga status-left "#{E:@catppuccin_status_application}"
-#set -g status-right ""
-#set -ga status-right "#{E:@catppuccin_status_session}"
-#setw -g window-status-style fg=brightblack
-#setw -g window-status-current-style fg=green,bright
-#setw -g window-status-activity-style fg=yellow,bright
-#setw -g window-status-bell-style fg=red,bright,blink
-#setw -g window-status-format " #I:#{b:pane_current_path}#F "
-#setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
-
-## dracula theme
-#set -g @plugin 'dracula/tmux'
-#set -g @dracula-show-powerline true
-#set -g @dracula-plugins "git cwd ssh-session"
-##set -g @dracula-show-left-icon session
-#set -g @dracula-show-left-icon "#[fg=darkblue,bold]#T"  # title
-##set -g @dracula-border-contrast true
-#
-#set -g @dracula-cwd-max-dirs "5"
-##set -g @dracula-cwd-max-chars "64"
-##set -g @dracula-show-ssh-only-when-connected true
-#
-##set -g @dracula-time-format "%F %a %R:%S"
-##set -g @dracula-refresh-rate 1
-#
-#set -g @dracula-show-flags true  # FIXME recover window status color config
+# set -g @catppuccin_flavor "latte"
+# set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "yes"
+set -g @catppuccin_pane_border_status "yes"
 
 ## Initialize TPM (keep this before local config sourcing)
+# TODO move from .dotfiles/install
+## bootstrap tpm
+#if "test ! -d ~/.tmux/plugins/tpm" \
+#   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # XXX using my fork netj/tpm for now; TODO switch back to tmux-plugins/tpm once merging outstanding improvements
 set -g @plugin 'netj/tpm'
 if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
@@ -114,11 +92,78 @@ if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
 # Essential config, continued; also compensating plugin
 ###############################################################################
 
+### status bar and window/pane much easier
+# based on @89iuv's great config from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
+set -g status-position bottom
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
+
+## status left look and feel
+set -g status-left-length 100
+set -g status-left ""
+# show prefix status
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]},#{#[bg=#{@thm_bg},fg=#{@thm_surface_2}]}}"
+# show session
+set -ga status-left "  #S "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# show zoom status dynamically
+set -ga status-left "#{?window_zoomed_flag,#{#[bg=#{@thm_bg},fg=#{@thm_green}]}   #{#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│},}"
+# show title
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_green},bold] #T "
+# last separator
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+
+## status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+# first separator
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# show workdir
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$HOME|~|:#{pane_current_path}}} "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# show time
+set -ga status-right " "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_lavender}]󰭦 %Y-%m-%d"
+set -ga status-right " "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_yellow}]󰅐 %H:%M:%S #[fg=#{@thm_surface_1}]%Z"
+set -g  status-interval 1
+set -ga status-right " "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# show host
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_surface_2}] 󰒍 #h "
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "..."
+set -g window-status-format         " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
+set -g window-status-current-format " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
+set -g window-status-style          "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-current-style  "bg=#{@thm_green},fg=#{@thm_bg},bold"
+set -g window-status-last-style     "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style     "bg=#{@thm_red},blink,fg=#{@thm_bg},bold"
+set -gF window-status-separator     "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│#[default]"
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g  pane-border-format ""
+# TODO show zoom status and title when zoomed or only one pane
+setw -ga pane-border-format "#{?pane_active,#{#[bg=#{@thm_mantle},fg=#{@thm_green},bold]},#{#[bg=#{@thm_overlay_0},fg=#{@thm_bg}]}}"
+setw -ga pane-border-format " #P:"
+setw -ga pane-border-format " #{pane_current_command} "
+setw -ga pane-border-format "#{?window_zoomed_flag,  ,}"
+setw -ga pane-border-format "#[default]"
+setw -ga pane-border-format "#{?window_zoomed_flag,  #{#[bg=#{@thm_bg},fg=#{@thm_sky},bold]} #T ,}"
+setw -g pane-active-border-style "bg=#{@thm_green},fg=#{@thm_green}"
+setw -g pane-border-style        "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-lines single
+
+## easier session/window actions
 unbind ^D; bind ^D detach           # easier detach w/ Ctrl
 unbind ^C; bind ^C new-window -c "#{pane_current_path}"  # easier new window
 unbind  C; bind  C new-session      # easier new session
 bind Tab attach-session -d          # easier to detach all other clients to make this client the only one
-bind ` confirm-before kill-session  # eaiser kill-session
+bind ` confirm-before kill-session  # easier kill-session
 
 ## settings for TMUX in TMUX windows/panes
 # C-t t to send prefix is a more sensible escaping scheme than TMUX or tmux-plugins/tmux-sensible's default
