tmux status bar and pane borders with clarity

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ setw -g window-status-format " #I:#{b:pane_current_path}#F "
 setw -g window-status-current-format " #I:#{b:pane_current_path}#F "
 
 set -g pane-border-status top
-set -g pane-border-format " #P: #{pane_current_command} "
+set -g pane-border-format " #P: #{pane_current_command} | #T "
 
 ###############################################################################
 # TPM Plugins
@@ -94,9 +94,12 @@ if-shell '[ -x ~/.tmux/plugins/netj/tpm/tpm ]' \
 
 ### status bar and window/pane much easier
 # based on @89iuv's great config from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
+# cf. https://github.com/tmux/tmux/wiki/Formats
+# cf. https://www.nerdfonts.com/cheat-sheet
+
 set -g status-position bottom
+set -g status-justify left  # or absolute-centre, right
 set -g status-style "bg=#{@thm_bg}"
-set -g status-justify "absolute-centre"
 
 ## status left look and feel
 set -g status-left-length 100
@@ -104,12 +107,12 @@ set -g status-left ""
 # show prefix status
 set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]},#{#[bg=#{@thm_bg},fg=#{@thm_surface_2}]}}"
 # show session
-set -ga status-left "  #S "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-# show zoom status dynamically
-set -ga status-left "#{?window_zoomed_flag,#{#[bg=#{@thm_bg},fg=#{@thm_green}]}   #{#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│},}"
-# show title
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_green},bold] #T "
+set -ga status-left "  #{=/32/...:#{session_name}} "
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+# # show zoom status dynamically
+# set -ga status-left "#{?window_zoomed_flag,#{#[bg=#{@thm_bg},fg=#{@thm_green}]}   #{#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│},}"
+# # show title
+# set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_green},bold] #T "
 # last separator
 set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
 
@@ -123,9 +126,9 @@ set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$HOME
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 # show time
 set -ga status-right " "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_lavender}]󰭦 %Y-%m-%d"
-set -ga status-right " "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_yellow}]󰅐 %H:%M:%S #[fg=#{@thm_surface_1}]%Z"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_yellow}]󰭦 %Y-%m-%d"
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_peach}] %a "
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_red}]󰅐 %H:%M:%S #[fg=#{@thm_surface_1}]%Z"
 set -g  status-interval 1
 set -ga status-right " "
 set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
@@ -137,23 +140,25 @@ set -wg automatic-rename on
 set -g automatic-rename-format "..."
 set -g window-status-format         " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
 set -g window-status-current-format " #I:#{?#{!=:#W,...}, #W, #{=/-32/...:#{b:pane_current_path}}} "
-set -g window-status-style          "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-style          "bg=#{@thm_bg},fg=#{@thm_overlay_2}"
 set -g window-status-current-style  "bg=#{@thm_green},fg=#{@thm_bg},bold"
-set -g window-status-last-style     "bg=#{@thm_bg},fg=#{@thm_peach}"
-set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
-set -g window-status-bell-style     "bg=#{@thm_red},blink,fg=#{@thm_bg},bold"
+set -g window-status-last-style     "bg=#{@thm_bg},fg=#{@thm_green},bold"
+set -g window-status-activity-style "blink"
+set -g window-status-bell-style     "bg=#{@thm_red},blink,fg=#{@thm_bg},blink"
 set -gF window-status-separator     "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│#[default]"
 
 # pane border look and feel
 setw -g pane-border-status top
 setw -g  pane-border-format ""
 # TODO show zoom status and title when zoomed or only one pane
-setw -ga pane-border-format "#{?pane_active,#{#[bg=#{@thm_mantle},fg=#{@thm_green},bold]},#{#[bg=#{@thm_overlay_0},fg=#{@thm_bg}]}}"
-setw -ga pane-border-format " #P:"
-setw -ga pane-border-format " #{pane_current_command} "
-setw -ga pane-border-format "#{?window_zoomed_flag,  ,}"
+setw -ga pane-border-format "#{?pane_active,#{#[bg=#{@thm_bg},fg=#{@thm_green},bold]},#{#[bg=#{@thm_overlay_0},fg=#{@thm_bg}]}}"
+setw -ga pane-border-format " "
+setw -ga pane-border-format "#{?window_zoomed_flag,  ,}"
+setw -ga pane-border-format " #P: #{pane_current_command} "
+setw -ga pane-border-format "│"
+setw -ga pane-border-format " #T "
+setw -ga pane-border-format " "
 setw -ga pane-border-format "#[default]"
-setw -ga pane-border-format "#{?window_zoomed_flag,  #{#[bg=#{@thm_bg},fg=#{@thm_sky},bold]} #T ,}"
 setw -g pane-active-border-style "bg=#{@thm_green},fg=#{@thm_green}"
 setw -g pane-border-style        "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
 setw -g pane-border-lines single
